Fixed Sildeout Bug seen on mobile

--- a/assets/css/base/_placeholders.scss
+++ b/assets/css/base/_placeholders.scss
@@ -223,6 +223,8 @@ footer{
   font-family: 'OpenSans-Bold', sans-serif;
 }
 .light{
+  font-size: 12px;
+  opacity: 0.6;
   font-family: 'proxima-nova-light', sans-serif;
 }
 
