--- a/assets/css/pages/_faq.scss
+++ b/assets/css/pages/_faq.scss
@@ -8,7 +8,7 @@
     margin-bottom: 5px;
   }
   .content{
-    padding: 50px 50px 0 50px;
+    padding: 50px 30px 0 30px;
   }
   .text-content{
     padding-left: 0;
